--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 		<title>Learn from YouTube</title>
 		<script src="https://www.youtube.com/iframe_api"></script>
 		<script src="yt-key.js"></script>
+		<script src="utils.js"></script>
 		<script src="auth.js"></script>
 		<script src="api.js"></script>
+		<script src="state.js"></script>
 		<script src="index.js"></script>
 		<script src="https://kit.fontawesome.com/6f20515d89.js" crossorigin="anonymous"></script>
 		<link rel="preconnect" href="https://fonts.gstatic.com">
@@ -44,6 +46,14 @@
 			<div id="playlists">
 				<h3>Playlists</h3>
 				<ul class="list" id="playlists__list"></ul>
+			</div>
+
+			<div id="videos">
+				<h3>
+					<a href="/"><i class="fas fa-reply" title="Back"></i></a>
+					Playlist: <span id="videos__playlist_title"></span>
+				</h3>
+				<ul class="list" id="videos__list"></ul>
 			</div>
 
 		</div>
