Improved login, added logout

--- a/index.html
+++ b/index.html
@@ -22,21 +22,25 @@
 		<div id="panel">
 			<div id="toolbar">
 
-				<button id="play">
+				<button id="play" title="Play">
 					<i class="fas fa-play"></i>
 				</button>
 
-				<button id="addBookmark">
+				<button id="addBookmark" title="Add bookmark">
 					<i class="far fa-bookmark"></i>
 				</button>
 
-				<button id="darken">
+				<button id="darken" title="Brightness">
 					<i class="fas fa-adjust"></i>
 					<span class="details"></span>
 				</button>
 
-				<button id="login">
+				<button id="login" title="Log in">
 					<i class="fas fa-sign-in-alt"></i>
+				</button>
+
+				<button id="logout" title="Log out">
+					<i class="fas fa-sign-out-alt"></i>
 				</button>
 
 			</div>
