Added rewind & fast-forward

--- a/src/index.html
+++ b/src/index.html
@@ -34,6 +34,21 @@
 
 					<span class="toolbar__divider"></span>
 
+					<button id="fast-backward" class="big-font" title="Fast backward (30s)">
+						<i class="fas fa-backward"></i>
+					</button>
+					<button id="backward" class="big-font" title="Backward (5s)">
+						<i class="fas fa-caret-left"></i>
+					</button>
+					<button id="forward" class="big-font" title="Forward (5s)">
+						<i class="fas fa-caret-right"></i>
+					</button>
+					<button id="fast-forward" class="big-font" title="Fast forward (30s)">
+						<i class="fas fa-forward"></i>
+					</button>
+
+					<span class="toolbar__divider"></span>
+
 					<button id="speedDown" class="big-font" title="Decrease speed">
 						<i class="fas fa-angle-left"></i>
 					</button>
